--- a/package.json
+++ b/package.json
@@ -29,19 +29,28 @@
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
     "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
+    "babel-eslint": "^4.1.8",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
+    "css-loader": "^0.23.1",
+    "eslint": "^2.2.0",
+    "eslint-config-airbnb": "^6.0.2",
+    "eslint-plugin-react": "^4.1.0",
+    "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.2",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "d3": "^3.5.16",
+    "lodash": "^4.5.1",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-addons-css-transition-group": "^0.14.7",
+    "react-dom": "^0.14.6",
+    "react-router": "^2.0.0"
   }
 }
